<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.thestreetcodecompany.roady.DrivingSessionAfter"
    tools:showIn="@layout/activity_driving_session_after">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewRoute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/driving_session_after_route"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextRoute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <View
                android:id="@+id/divider7"
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_margin="6dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textViewDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/driving_session_after_date_and_time"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDateStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="Start"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/buttonDateStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@android:color/transparent"
                    android:text="@string/driving_session_after_date" />

                <Button
                    android:id="@+id/buttonTimeStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:background="@android:color/transparent"
                    android:text="@string/driving_session_after_time" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDateEnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="End"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/buttonDateEnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@android:color/transparent"
                    android:text="@string/driving_session_after_date" />

                <Button
                    android:id="@+id/buttonTimeEnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:background="@android:color/transparent"
                    android:text="@string/driving_session_after_time" />

            </LinearLayout>

            <View
                android:id="@+id/divider1"
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_margin="6dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewVehicle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/driving_session_after_vehicle"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinnerVehicle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4" />
            </LinearLayout>

            <View
                android:id="@+id/divider6"
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_margin="6dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCoDriver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/driving_session_after_codriver"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinnerCoDriver"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4" />
            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_margin="6dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/driving_session_afterwards_mileage"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewMileageStart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/driving_session_after_start"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:id="@+id/editTextMileageStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number|numberDecimal"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/textViewMileageStartKM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/km"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewMileageEnd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/driving_session_after_end"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:id="@+id/editTextMileageEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number|numberDecimal"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/textViewMileageEndKM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/km"
                        android:textColor="@android:color/black" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_margin="6dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewWeather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/driving_session_after_weather"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinnerWeather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4" />

            </LinearLayout>

            <View
                android:id="@+id/divider4"
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_margin="6dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewRoadCondition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/driving_session_after_road_condition"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinnerRoadCondition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4" />
            </LinearLayout>


            <View
                android:id="@+id/divider5"
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_margin="6dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />


            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/driving_session_after_save" />


            <View
                android:id="@+id/dividerBottom"
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_margin="8dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>