...
    <string name="driving_session_afterwards_mileage">Mileage</string>
    <string name="km">km</string>
    <string name="driving_session_after_end">End</string>
    <string name="driving_session_after_start">Start</string>
    <string name="driving_session_after_weather">Weather</string>
    <string name="driving_session_after_road_condition">Road condition</string>
    <string name="driving_session_after_save">Save</string>
    <string name="driving_session_after_codriver">CoDriver</string>
    <string name="driving_session_after_vehicle">Vehicle</string>
    <string name="driving_session_after_time">Time</string>
    <string name="driving_session_after_date">Date</string>
    <string name="driving_session_after_date_and_time">Date and Time</string>
    <string name="driving_session_after_route">Route</string>
...
